creusot/tests/should_succeed/bug/minus_assoc.rs
extern crate creusot_contracts;

use creusot_contracts::*;

#[ensures(0 - (1 - 1) == 0)]
pub fn f() {}
